   * Fix attacker side being human in 6p_Team_Survival (bug #19400)
   * Ignore Pango markup in map descriptions (bug #19210)
   * Canceling the sides setup screen when hosting a MP game now brings the
     host back to the game configuration screen first instead of returning
     immediately to the lobby or (for hotseat) titlescreen (bug #7130)
 * Music and sound effects:
   * Replaced some of the wolf hit sounds with lower-pitched ones
 * Terrain:
   * New Syntax for terrain maps
   * New tropical forest images
   * New palm forest terrain
   * Deprecated flowers (Ggf) and Volcano (Qv) removed - use Gg^Efm and Mv
     respectively
   * Fix bridge/rail transitions to each other
   * Add new rail terrain type; no existing unit can move on it, so their
     move/defense values are unchanged
 * Unit changes and balancing:
   * New extra_define ENABLE_WOLF_ADVANCEMENT to optionally enable Wolves
     advancement to Great Wolves and Direwolves
   * New extra_define ENABLE_TROLL_SHAMAN to optionally enable Troll Whelps
     advancement to Troll Shamans (not in multiplayer)
   * Lowered General's experience to 150 when extra_define DISABLE_GRAND_MARSHAL
     is used
 * User interface:
   * Restored leader unit image in Load Game dialog (bug #18683)
   * Added a "Back to Start" option to the game menu to load the current
     scenario's start save if it is available (feature/bug #18027)
   * Added tooltips to Load Game dialog (feature/bug #18249)
   * Added a Reset All button to Hotkey Settings dialog in preferences
     (feature/bug #3797)
   * Fixed excessive idle CPU usage in story screens without story text
   * Map editor now displays invisible overlay terrains on main map
   * Made add-ons with markup characters at the start of their titles
     display normally in the add-ons management dialogs (e.g. without
     colors)
   * Re-fogging does not occur in the middle of the player's turn.
   * Fixed provided saved game filenames being ignored when requesting to