@@ -73,6 +73,8 @@ Version 1.11.0-svn:
    * Canceling the sides setup screen when hosting a MP game now brings the
      host back to the game configuration screen first instead of returning
      immediately to the lobby or (for hotseat) titlescreen (bug #7130)
+   * The Set Password action is no longer shown for local hotseat games
+     (bug #10784)
  * Music and sound effects:
    * Replaced some of the wolf hit sounds with lower-pitched ones
  * Terrain:
